# chronosia

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yml  old-Cargo.toml  readme.md
E-skeleton-login/: README.MD  docker-compose.yml  package-lock.json  package.json
E-skeleton-login/server/: app.js
E-skeleton-login/server/mongoDB/: userModel.js
E-skeleton-login/server/requests/: loginRequests.js  logoutRequest.js  registerRequests.js  statusRequests.js
E-skeleton-login/server/tests/: app.test.js  login.test.js  logout.test.js  register.test.js  status.test.js
E-skeleton-login/server/tools/: validation.js
chronosia-server/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md  resetAllData.sh
chronosia-server/src/: endpoints.rs  main.rs
chronosia-server/src/graphql/: base.rs
chronosia-server/src/models/: mod.rs  punch.rs  user.rs
chronosia-server/src/operations/: punches.rs  users.rs
chronosia-server/src/rest/: bearer.rs  generic.rs
chronosia-server/src/tests/: schema.graphql  tests.rs
chronosia-web/: .env  .gitignore  README.md  package-lock.json  package.json
chronosia-web/src/: main.js
chronosia-web/src/router/: index.js
chronosia-web/src/store/: index.js  loginStore.js
migrations/2022-01-21-163056_chronos/: down.sql  up.sql
scripts/: test.sh
src/: db.rs  endpoints.rs  main.rs  schema.rs  utils.rs
src/graphql/: base.rs
src/models/: punch.rs  user.rs
src/operations/: mod.rs  punches.rs  users.rs
src/rest/: bearer.rs  generic.rs  mod.rs
src/tests/: connection_test.rs  mod.rs  user_test.rs
(+39 files in other folders)
