[package]
name = "rust-gress"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = "0.14.2"
r2d2 = "0.8.8"
serde_json = "1.0.44"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = "0.4.19"
serde = "1.0.135"

[dev-dependencies]
graphql_client = { version = "0.10.0", features = ["reqwest"] }
serde = { version = "1.0.67", features = ["derive"] }
reqwest = "0.11.3"
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }